// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot with control buttons enabled 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-code-editor"
  >
    <div
      class="pf-v6-c-code-editor__container"
      role="presentation"
      tabindex="0"
    >
      <div
        class="pf-v6-c-code-editor__header"
      >
        <div
          class="pf-v6-c-code-editor__header-content"
        >
          <div
            class="pf-v6-c-code-editor__controls"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-label="Copy code to clipboard"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0  "
                    width="1em"
                  >
                    <path />
                  </svg>
                </span>
              </button>
            </div>
            <div
              style="display: contents;"
            >
              <button
                aria-label="Upload code"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0  "
                    width="1em"
                  >
                    <path />
                  </svg>
                </span>
              </button>
            </div>
            <div
              style="display: contents;"
            >
              <button
                aria-label="Download code"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0  "
                    width="1em"
                  >
                    <path />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-code-editor__main"
      >
        <input
          hidden=""
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          tabindex="-1"
          type="file"
        />
        <div
          class="pf-v6-c-code-editor__code"
          dir="ltr"
          tabindex="0"
        >
          <div
            data-testid="mock-editor"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches snapshot without props 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-code-editor"
  >
    <div
      class="pf-v6-c-code-editor__header"
    />
    <div
      class="pf-v6-c-code-editor__main"
    >
      <input
        hidden=""
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        tabindex="-1"
        type="file"
      />
      <div
        class="pf-v6-c-code-editor__code"
        dir="ltr"
        tabindex="0"
      >
        <div
          data-testid="mock-editor"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
